--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <style type="text/css">
 	h1{
 		position: absolute;
+		color : white;
+		background-color: #2ecc71;
 		top: 40%;
 		width: 100%;
 		font-family: Helvetica;
